# Mattermost-Coffee-Bot

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
event_handler/: posted_handler.py
models/: MattermostModel.py
sandbox/: sandbox.py
